Fixed the desktop background divs from overlapping using minmax(0, 1fr) for their containers and using justify-items for the middle container.

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ main {
 .backgrounds-div {
   display: grid;
   grid-area: clmn-left / clmn-left / clmn-right / clmn-right;
-  grid-template: 'bgd-left bgd-main bgd-right' 1fr / 1fr 70% 1fr;
+  grid-template: 'bgd-left bgd-main bgd-right' minmax(0, 1fr) / minmax(0, 1fr) 70% minmax(0, 1fr);
   z-index: 1;
 }
 
@@ -53,7 +53,7 @@ main {
   display: grid;
   grid-template: 
     'ethan' auto
-    'pattern' 1fr / 1fr;
+    'pattern' minmax(0, 1fr) / minmax(0, 1fr);
   overflow: hidden;
 }
 
@@ -125,6 +125,7 @@ main {
 .bgd-desktop__frame {
   box-shadow: 0 0 160px 150px rgba(0, 0, 0, 1);
   grid-area: pattern;
+  width: 100%;
 }
 
 .bgd-desktop__img {
@@ -262,13 +263,13 @@ main {
 .bgd-desktop--left {
   background-position: right top;
   grid-area: bgd-left;
-  justify-self: start;
+  justify-items: start;
 }
 
 .bgd-desktop--right {
   background-position: left top;
   grid-area: bgd-right;
-  justify-self: end;
+  justify-items: end;
 }
 
 .résumé-modal__btn--x {
